# gst-meet

./: gstmeet.h_workingInQmlGst2
gst-meet/src/: main.rs
lib-gst-meet-c/: cbindgen.toml  gstmeet.h
lib-gst-meet/src/: jingle.rs
lib-gst-meet/src/xmpp/: connection.rs
nice-gst-meet/: Cargo.toml  Gir.toml
nice-gst-meet-sys/: Cargo.toml  Gir.toml  build.rs
nice-gst-meet-sys/src/: lib.rs
nice-gst-meet-sys/tests/: abi.rs  constant.c  layout.c
nice-gst-meet/src/: address.rs  agent.rs  candidate.rs  enums.rs  flags.rs  mod.rs
